include/generator.h

typedef gint32 SAMPLETIME;	/* must be signed. */
typedef struct EventLink EventLink;
typedef struct InputSignalDescriptor InputSignalDescriptor;
typedef struct OutputSignalDescriptor OutputSignalDescriptor;
typedef struct GeneratorClass GeneratorClass;
typedef struct Generator Generator;
typedef struct ControlDescriptor ControlDescriptor;
/**
 * \brief This is the function type that is called on receive of an Event.
 *
 * \param recip The Generator receiving the event.
 * \param event The AEvent to process.
 */

typedef void (*AEvent_handler_t)(Generator *recip, AEvent *event);
/**
 * \brief This is function type used for pickle and unpickle.
 *
 * The generic part of the Generator is allready pickled/unpickled when this function is
 * called. This is why this function also receives the ObjectStoreItem as a Parameter.
 *
 * \param gen The Generator which shall be pickled/unpickled.
 * \param item The ObjectStoreItem associated with this Generator.
 * \param db The ObjectStore used.
 */

typedef void (*AGenerator_pickle_t)(Generator *gen, ObjectStoreItem *item, ObjectStore *db);
/**
 * \brief represents a link between 2 Generators.
 */

struct EventLink {
  int is_signal;		/**< true for signal link, false for event link */
  Generator *src;
  gint src_q;
  Generator *dst;
  gint dst_q;
};
struct InputSignalDescriptor {
  const char *name;
  guint flags;
};
struct OutputSignalDescriptor {
  const char *name;
  guint32 flags;
  struct {
    AGenerator_t realtime;
    struct {
      SAMPLETIME (*get_range)(Generator *generator, OutputSignalDescriptor *sig);
      gboolean (*get_samples)(Generator *generator, OutputSignalDescriptor *sig,
			      SAMPLETIME offset, SAMPLE *buffer, int length);
    } randomaccess;
    gboolean (*render_gl)(Generator *generator );
  } d;
};
struct GeneratorClass {

  char *name;				/* human-readable name - and also
					   tag for save/load, so MUST be unique */
  char *tag;				/* this is the new tag for save/load 
					   it is needed because of the ladspas */

  /* Event inputs */
  gint in_count;
  char **in_names;
  AEvent_handler_t *in_handlers;

  /* Event outputs */
  gint out_count;
  char **out_names;

  /* Signal inputs */
  gint in_sig_count;
  InputSignalDescriptor *in_sigs;

  /* Signal outputs */
  gint out_sig_count;
  OutputSignalDescriptor *out_sigs;

  /* Control descriptors */
  ControlDescriptor *controls;
  int numcontrols;

  /* Instance methods */
  int (*initialize_instance)(Generator *g);
  void (*destroy_instance)(Generator *g);

  AGenerator_pickle_t unpickle_instance;
  AGenerator_pickle_t pickle_instance;
};
struct Generator {
  GeneratorClass *klass;
  char *name;

  /* Links to other Generators */
  GList **in_events;		/* array of GLists of EventLinks */
  GList **out_events;
  GList **in_signals;
  GList **out_signals;

  //EventQ *input_events;
  /* Sample caching for multiple (realtime) reads */
  /* note that we don't cache randomaccess signal generators */
  SAMPLETIME *last_sampletime;
  SAMPLE **last_buffers;
  int *last_buflens;
  gboolean *last_results;

  /* Controls */
  GList *controls;

  /* per-class data */
  void *data;
};
/*=======================================================================*/
/* Managing Generators */
extern Generator *gen_new_generator(GeneratorClass *k, char *name);
extern void gen_kill_generator(Generator *g);
extern Generator *gen_unpickle(ObjectStoreItem *item);
extern ObjectStoreItem *gen_pickle(Generator *g, ObjectStore *db);
/*=======================================================================*/
/* Managing links between Generators */
extern EventLink *gen_link(int is_signal, Generator *src, gint src_q, Generator *dst, gint dst_q);
extern EventLink *gen_find_link(int is_signal, Generator *src, gint src_q, Generator *dst, gint dst_q);
extern void gen_unlink(EventLink *lnk);
extern GHashTable *get_generator_classes( void );
/*=======================================================================*/
/* Module setup/shutdown */

extern void init_generator(void);
extern void init_clock(void);
extern void init_event(void);